force-app/main/default/objects/leaseworks__Power_BI_Auth_Settings__mdt/leaseworks__Power_BI_Auth_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Power BI Auth Settings</label>
    <pluralLabel>Power BI Auth Settings</pluralLabel>
</CustomObject>