force-app/main/default/objects/leaseworks__Power_BI_Auth_Settings__mdt/fields/leaseworks__ClientId__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__ClientId__c</fullName>
    <description>Application Id/ Client Id is created in the Azure AD and used to configure the project&#39;s support for Client Credentials Flow.</description>
    <label>ClientId</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>