force-app/main/default/objects/leaseworks__Power_BI_Auth_Settings__mdt/fields/leaseworks__ClientSecret__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__ClientSecret__c</fullName>
    <description>Client Secret is created in the Azure AD and used to configure the project&apos;s support for Client Credentials Flow.</description>
    <label>ClientSecret</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>