force-app/main/default/objects/leaseworks__Power_BI_Auth_Settings__mdt/fields/leaseworks__Embedded_Report_Url__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Embedded_Report_Url__c</fullName>
    <description>Url for embedding the report 
Eg : &apos;https://api.powerbi.com/v1.0/myorg/groups/&apos; + WorkspaceId + &apos;/reports/&apos; + ReportId + &apos;/GenerateToken&apos;;</description>
    <label>Embedded Report Url</label>
    <required>true</required>
    <type>Url</type>
</CustomField>