force-app/main/default/objects/leaseworks__Power_BI_Auth_Settings__mdt/fields/leaseworks__Login_Url_part1__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Login_Url_part1__c</fullName>
    <description>Login url part 1 for the powerBI endPoint : 
Eg: https://login.microsoftonline.com/</description>
    <label>Login Url_part1</label>
    <required>true</required>
    <type>Url</type>
</CustomField>