force-app/main/default/objects/leaseworks__Power_BI_Auth_Settings__mdt/fields/leaseworks__Login_Url_part2__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Login_Url_part2__c</fullName>
    <description>Login url part 2 for the powerBI endPoint : 
Eg: /oauth2/v2.0/token</description>
    <label>Login Url part2</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
</CustomField>