force-app/main/default/objects/leaseworks__Power_BI_Auth_Settings__mdt/fields/leaseworks__Report_Url__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Report_Url__c</fullName>
    <description>Url for the report
Eg : https://api.powerbi.com/v1.0/myorg/groups/</description>
    <label>Report Url</label>
    <required>true</required>
    <type>Url</type>
</CustomField>