force-app/main/default/objects/leaseworks__Power_BI_Auth_Settings__mdt/fields/leaseworks__Scope__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Scope__c</fullName>
    <description>https://analysis.windows.net/powerbi/api/.default</description>
    <label>Scope</label>
    <required>true</required>
    <type>Url</type>
</CustomField>