force-app/main/default/objects/leaseworks__Power_BI_Auth_Settings__mdt/fields/leaseworks__TenantId__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__TenantId__c</fullName>
    <description>Tenant Id is created in the Azure AD and used to configure the project&#39;s support for Client Credentials Flow.</description>
    <label>TenantId</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
</CustomField>